style.css
h1 {
  color: #651fff;
}

h2 {
  color: rgb(20, 29, 60);
  font-size: 4vw;
}

.bold {
  font-weight: 800;
  color: black;
}

#ttglogo {
  width: 80%;
  height: auto;
}

body {
  font-size: 14px;
}

.textcenter {
  text-align: center;
}

.bigcard {
  width: 70%;
}

#why {
  height: 700px;
}

.center {
  margin-left: auto;
  margin-right: auto;
}

main {
  margin-top: 10px;
}

footer {
  margin-top: 60px;
  background-color: #651fff;
  color: white;
}

.disclaimer {
  font-size: 8pt;
}

a {
  text-decoration: none;
}

#ringvid {
  height: 500px;
}

a {
  color: #651fff;
}

.btn {
  color: #651fff;
  font-weight: 500;
}

.btn:hover,
a:hover {
  color: grey;
  text-decoration: none;
}

@media only screen and (max-width: 600px) {
  .bigcard {
    width: 98%;
  }
  #ringvid {
    height: 250px;
  }
  h2 {
    font-size: 6vw;
  }
}

